dist/1.0/bin/sample/retrieveUnpackaged/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>Record Type for newly craeted Account</description>
        <inlineHelpText>Record Type for newly craeted Account</inlineHelpText>
        <label>Account Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Validation__c</fullName>
        <description>Coresponds to field on Account during conversion. Set automatically on Lead based on completness of Accout/Contact data required for proper creation of new Account.</description>
        <inlineHelpText>Set automatically based on completness of Accout/Contact data.

- Account Record Type
- Company (Company/Partner)
- ID Type
- GTS Location
- Segment (HOME=Residential)
- First Name
- Last Name
- Email
- Phone (Contact Phone or Mobile)
- Mobile</inlineHelpText>
        <label>Account Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_from_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set corresponding field on newly created Account</description>
        <label>Account from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreaofInterest__c</fullName>
        <label>Area of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice and Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessResidential__c</fullName>
        <label>Business/Residential</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLLICode__c</fullName>
        <label>CLLI Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Civil Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Close Date for new Opportunity</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <label>Contact Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address_OSS__c</fullName>
        <description>Correspondence Address</description>
        <inlineHelpText>Correspondence Address from OSS</inlineHelpText>
        <label>Correspondence Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Leads (Correspondence Address)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentLocalProvider__c</fullName>
        <label>Current Local Provider</label>
        <picklist>
            <picklistValues>
                <fullName>BellSouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business (none)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataProductRequested__c</fullName>
        <label>Data Product Requested</label>
        <picklist>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SONET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistancetoCOkft__c</fullName>
        <label>Distance to CO (kft)</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Company email</description>
        <inlineHelpText>Company email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 - 199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 - 249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 - 499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 - 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 - 1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000 - 2999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 - 3999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000 - 4999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000 - 9999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000 - 19999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExistingDataProvider__c</fullName>
        <label>Existing Data Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Provider 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExistingLDProvider__c</fullName>
        <label>Existing LD Provider</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldcom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Location for new Opportunity. Currently it will always be GTS Slovakia</description>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To allow conversion of Lead to Account the chekbox Has Address on Account has to be marked even before the Address itself is added. This is due to validation rule preventing change of Account Validation to Valid if there is no Registration Address.</description>
        <label>Has Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <label>ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_type__c</fullName>
        <label>ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company Registration Number</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name and Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LATA__c</fullName>
        <label>LATA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNPRequested__c</fullName>
        <label>LNP Requested</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact__c</fullName>
        <description>Extranet User (SFDC Contact) which has modified record</description>
        <inlineHelpText>Extranet User (SFDC Contact) which has modified record</inlineHelpText>
        <label>Last Modified by Extranet Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Last Modified by Extranet Contact)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Txt__c</fullName>
        <description>Extranet User (not represented in SFDC) which modified reord</description>
        <inlineHelpText>Extranet User (not represented in SFDC) which modified reord</inlineHelpText>
        <label>Last Modified by Extranet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Close_Date__c</fullName>
        <description>Planned date when Lead should be closed</description>
        <inlineHelpText>Planned date when Lead should be closed</inlineHelpText>
        <label>Lead Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Notification_Email__c</fullName>
        <defaultValue>&quot;izabela.krajewska-ciska@gtsenergis.pl&quot;</defaultValue>
        <description>Field for storing email alias for Lead processing team. Dependant on GTS Location.</description>
        <inlineHelpText>Field for storing email alias for Lead processing team. Dependant on GTS Location.</inlineHelpText>
        <label>Lead Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount__c</fullName>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NACE__c</fullName>
        <description>Statistical Classification of Economic Activities in the European Community, Rev. 2</description>
        <inlineHelpText>Statistical Classification of Economic Activities in the European Community, Rev. 2</inlineHelpText>
        <label>NACE</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPA__c</fullName>
        <label>NPA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXX__c</fullName>
        <label>NXX</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Lead_Date__c</fullName>
        <description>Date when status of Lead is changed from Open</description>
        <inlineHelpText>Date when status of Lead is changed from Open</inlineHelpText>
        <label>Open Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Number of days from current date (date of conversion) when Opportunity is planned to be Closed.</description>
        <inlineHelpText>Number of days from current date (date of conversion) when Opportunity is planned to be Closed.</inlineHelpText>
        <label>Opp. Close Date in Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <description>Record Type for newly craeted Opportunity</description>
        <inlineHelpText>Record Type for newly craeted Opportunity</inlineHelpText>
        <label>Opportunity Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Suspect</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_Details__c</fullName>
        <label>Opportunity Type Details</label>
        <picklist>
            <picklistValues>
                <fullName>New Service</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Partner Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Email address from Partner Account which is related to Lead.</description>
        <inlineHelpText>Email address from Partner Account which is related to Lead.</inlineHelpText>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <description>Relation to Partner User (Contact) who requested Lead creation</description>
        <label>Partner User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrequalificationResult__c</fullName>
        <label>Prequalification Result</label>
        <picklist>
            <picklistValues>
                <fullName>Definite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Product 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PromotionCode__c</fullName>
        <label>Promotion Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatePlanCode__c</fullName>
        <label>Rate Plan Code</label>
        <picklist>
            <picklistValues>
                <fullName>A100001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A100003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A100004</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>Reason for closing Lead as Unqualified</description>
        <inlineHelpText>Reason for closing Lead as Unqualified</inlineHelpText>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Customer is not interested in GTS services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Limit Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrongly created lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Address_OSS__c</fullName>
        <description>Registration Address</description>
        <inlineHelpText>Registration Address from OSS</inlineHelpText>
        <label>Registration Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Address__c</fullName>
        <label>Address Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Replace_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When marked addresses will be replaced when converting to existing Account.</description>
        <inlineHelpText>When marked addresses will be replaced when converting to existing Account.</inlineHelpText>
        <label>Replace Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Representative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>BU1000 division. Who is owning revenue from opportunity, Retail or Wholesale.</description>
        <inlineHelpText>BU1000 division. Who is owning revenue from opportunity, Retail or Wholesale.</inlineHelpText>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reteil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segment ... Potential Value

ME ... 10000 &lt;= P
LE+ ... 4000 &lt;= P &lt;= 10000
LE ... 2000 &lt;= P &lt;= 4000
SME+ ... 800 &lt;= P &lt;= 2000
SME ... 200 &lt;= P &lt;= 800
SOHO+ ... 80 &lt;= P &lt;= 200
SOHO ... 0 &lt;= P &lt;= 80</description>
        <inlineHelpText>Segment ... Potential Value

ME ... 10000 &lt;= P
LE+ ... 4000 &lt;= P &lt;= 10000
LE ... 2000 &lt;= P &lt;= 4000
SME+ ... 800 &lt;= P &lt;= 2000
SME ... 200 &lt;= P &lt;= 800
SOHO+ ... 80 &lt;= P &lt;= 200
SOHO ... 0 &lt;= P &lt;= 80</inlineHelpText>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>SOHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOHO+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <description>Age in days counted from date when Lead changed status to Open</description>
        <formula>IF( TEXT(Status)&lt;&gt;&quot;Qualified&quot; &amp;&amp; TEXT(Status)&lt;&gt;&quot;Unqualified&quot;&amp;&amp;TEXT(Status)&lt;&gt;&quot;New&quot; , Lead_Close_Date__c - TODAY() ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in days counted from date when Lead changed status to Open</inlineHelpText>
        <label>Time Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount for new Opportunity</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Account_Record_Type__c</controllingField>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VoiceProductRequested__c</fullName>
        <label>Voice Product Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trunk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Extranet_Leads_PL</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>Identification_Number__c</columns>
        <columns>Identification_type__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_User__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Completed</value>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Poland</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Extranet</value>
        </filters>
        <label>Extranet Leads PL</label>
        <sharedTo>
            <rolesAndSubordinates>Domestic Sales Support Director PL</rolesAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
</CustomObject>